--- a/flare.css
+++ b/flare.css
@@ -5,9 +5,8 @@ html {
 }
 
 body {
-  font: 300 36px "Helvetica Neue";
+  font: 400 36px "Helvetica Neue";
   height: 100%;
-  overflow: hidden;
   width: 100%;
   margin:0;
 }
@@ -19,68 +18,6 @@ a:link, a:visited {
 
 a:hover {
   color: #666;
-}
-
-body > ul {
-  margin: 0;
-  padding: 0;
-}
-
-h1 {
-  font-size: 64px;
-}
-
-h1, h2, h3 {
-  font-weight: inherit;
-  margin: 0;
-}
-
-h2, h3 {
-  text-align: right;
-  font-size: inherit;
-  position: absolute;
-  bottom: 0;
-  right: 0;
-}
-
-h2 {
-  font-size: 24px;
-  position: absolute;
-}
-
-h3 {
-  bottom: -20px;
-  font-size: 18px;
-}
-
-.invert {
-  background: #1f1f1f;
-  color: #dcdccc;
-}
-
-.invert h2, .invert h3 {
-  color: #7f9f7f;
-}
-
-.string, .regexp {
-  color: #f39;
-}
-
-.keyword {
-  color: #00c;
-}
-
-.comment {
-  color: #777;
-  font-style: oblique;
-}
-
-.number {
-  color: #369;
-}
-
-.class, .special {
-  color: #1181B8;
 }
 
 body > svg {
@@ -106,15 +43,47 @@ body > svg {
     -moz-border-radius: 3px;
     border-radius: 3px;
 	padding:20px 0;
+	overflow:hidden;
 }
 
 #infobox h1 {
 	font-size:20px;
 	color:#E00;
 	font-weight:bold;
-	margin-top:10px;
+	margin:10px 0 0;
+}
+
+#infobox div {
+	text-align:left;
+	margin:10px 25px 0;
+	overflow:hidden;
+	display:none;
+}
+
+#infobox h2 {
+	font-size:16px;
+	color:#000;
+	font-weight:bold;
+	margin:0;
+}
+
+#infobox div#sizeCalculator {
+	display:block;
+	position:absolute;
+	left:0px;
+	top:0px;
+	opacity:0;
+	filter:alpha(opacity=0);
+}
+
+#infobox p {
+	font-size:15px;
+	margin:0;
 }
 
 #infobox img {
 	width:100px;
+	position:relative;
+	z-index:5;
+	border:none;
 }
