--- a/flare.css
+++ b/flare.css
@@ -12,7 +12,7 @@ body {
 }
 
 a:link, a:visited {
-  color: #777;
+  color: #E00;
   text-decoration: none;
 }
 
@@ -26,32 +26,61 @@ body > svg {
   height:100%;
 }
 
-#infobox {
+#infobox, #warning {
 	background-color:#fff;
 	position: absolute;
-	text-align:center;
-    z-index: 102;
-    width: 300px;
-    right: 20px;
-    top: 20px;
-    background-color: #fff;
     -webkit-box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.6);
     -moz-box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.6);
     box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.6);
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
     border-radius: 3px;
-	padding:20px 0;
-	overflow:hidden;
+    top: 20px;
 }
 
-#infobox h1 {
+#warning {
+	width:300px;
+	left:20px;
+	z-index:10;
+	padding:20px;
+}
+
+#warning h2 {
+	margin-top:0;
+}
+
+#warning .close {
+	display:none;
+	position:absolute;
+	top:5px;
+	right:10px;
+	cursor:pointer;
+	font-size:12px;
+}
+
+#warning:hover .close {
+	display:block;
+}
+
+#infobox {
+	text-align:center;
+    z-index: 102;
+    width: 300px;
+    right: 20px;
+	overflow:hidden;
+	padding:20px 0;
+}
+
+#infobox h1, #warning h2 {
 	font-size:19px;
 	color:#E00;
 	font-weight:bold;
-	margin:10px 0 0;
 	text-align:left;
+}
+
+#infobox h1 {
 	padding:0 25px;
+	margin:10px 0 0;
 }
 
 #infobox div {
@@ -77,7 +106,7 @@ body > svg {
 	filter:alpha(opacity=0);
 }
 
-#infobox p {
+#infobox p, #warning p {
 	font-size:15px;
 	margin:0;
 }
@@ -87,4 +116,8 @@ body > svg {
 	position:relative;
 	z-index:5;
 	border:none;
+}
+
+#warning {
+	
 }
