--- a/flare.css
+++ b/flare.css
@@ -71,6 +71,45 @@ body > svg {
 	padding:20px 0;
 }
 
+#infobox.small {
+	right:auto;
+	left:0;
+	top:0;
+	width:100%;
+	min-width:580px;
+	height:50px;
+	-webkit-box-shadow:none;
+    -moz-box-shadow:none;
+    box-shadow:none;
+}
+
+#infobox.small h1 {
+	margin-top:0;
+}
+
+#infobox.small .text, #infobox.small img {
+	float:left;
+}
+
+#infobox.small .info {
+	margin:0;
+	padding-left:25px;
+	font-size:15px;
+}
+
+#infobox.small .info * {
+	display:inline;
+}
+
+#infobox.small #downloadSVG {
+	display:none;
+}
+
+#infobox.small img {
+	width:50px;
+	margin-left:25px;
+}
+
 #infobox h1, #warning h2 {
 	font-size:19px;
 	color:#E00;
@@ -83,7 +122,7 @@ body > svg {
 	margin:10px 0 0;
 }
 
-#infobox div {
+#infobox .info {
 	text-align:left;
 	margin:10px 25px 0;
 	overflow:hidden;
