--- a/legacy_app/flare.css
+++ b/legacy_app/flare.css
@@ -41,7 +41,7 @@ body > svg {
 #warning {
 	width:300px;
 	left:20px;
-	z-index:10;
+	z-index:200;
 	padding:20px;
 }
 
@@ -77,7 +77,7 @@ body > svg {
 	top:0;
 	width:100%;
 	min-width:580px;
-	height:50px;
+	height:60px;
 	-webkit-box-shadow:none;
     -moz-box-shadow:none;
     box-shadow:none;
@@ -94,10 +94,9 @@ body > svg {
 #infobox.small .info {
 	margin:0;
 	padding-left:25px;
-	font-size:15px;
 }
 
-#infobox.small .info * {
+#infobox .info * {
 	display:inline;
 }
 
@@ -106,7 +105,8 @@ body > svg {
 }
 
 #infobox.small img {
-	width:50px;
+	width:auto;
+	height:60px;
 	margin-left:25px;
 }
 
@@ -124,9 +124,14 @@ body > svg {
 
 #infobox .info {
 	text-align:left;
+	font-size:15px;
 	margin:10px 25px 0;
 	overflow:hidden;
 	display:none;
+}
+
+#infobox .text {
+	max-width:500px;
 }
 
 #infobox h2 {
@@ -157,9 +162,14 @@ body > svg {
 	border:none;
 }
 
-#infobox p#downloadSVG {
+#infobox p#downloadSVG, #infobox #howToUse {
 	text-align:left;
-	margin:10px 25px 0;
+	margin:10px 0 0 25px;
+}
+
+#infobox.small #howToUse {
+	margin-top:5px;
+	font-size:12px;
 }
 
 #tooltip {
